# rfid-audio-raspberry

./: Cargo.toml  README.md  mapping.txt  rfid-audio.service
src/: main.rs
